--- a/config.org
+++ b/config.org
@@ -1,26 +1,283 @@
-#+TITLE: Dan's DOOM emacs config
+# -*- eval: (when (fboundp #'toc-org-mode) (toc-org-mode)); -*-
+#+TITLE: Dan's DOOM emacs configuration
+#+OPTIONS: toc:nil tags:nil todo:nil
 
+* Table Of Contents :TOC_9_org:
+- [[Rationale][Rationale]]
+  - [[~(message "Hello, %s!" "emacs")~][~(message "Hello, %s!" "emacs")~]]
+  - [[Distro-hopping with emacs distros][Distro-hopping with emacs distros]]
+  - [[Back to vanilla.][Back to vanilla.]]
+  - [[Why DOOM?][Why DOOM?]]
+  - [[TL;DR:][TL;DR:]]
+- [[Installation][Installation]]
+  - [[Prerequisites][Prerequisites]]
+- [[Configuration][Configuration]]
+  - [[init.el][init.el]]
+    - [[Lexical binding.][Lexical binding.]]
+    - [[doom!][doom!]]
+      - [[Document which modules I choose and why.][Document which modules I choose and why.]]
+        - [[:input][:input]]
+        - [[:completion][:completion]]
+        - [[:ui][:ui]]
+        - [[:editor][:editor]]
+        - [[:emacs][:emacs]]
+        - [[:term][:term]]
+        - [[:checkers][:checkers]]
+        - [[:tools][:tools]]
+        - [[:tools][:tools]]
+        - [[:lang][:lang]]
+          - [[rust +lsp][rust +lsp]]
+            - [[Dependencies:][Dependencies:]]
+          - [[sh][sh]]
+          - [[web][web]]
+        - [[:email][:email]]
+        - [[:app][:app]]
+        - [[:config][:config]]
+  - [[package.el][package.el]]
+    - [[Lexical binding][Lexical binding]]
+    - [[How does package.el work?][How does package.el work?]]
+    - [[Declarations][Declarations]]
+  - [[config.el][config.el]]
+    - [[Lexical binding][Lexical binding]]
+    - [[Personal information][Personal information]]
+    - [[Default font][Default font]]
+    - [[Default theme][Default theme]]
+      - [[Nord powered aesthetics.][Nord powered aesthetics.]]
+    - [[Rainbow Delimeters][Rainbow Delimeters]]
+    - [[Modeline][Modeline]]
+    - [[Perspective][Perspective]]
+    - [[Org][Org]]
+    - [[Pretending we are in vim? That's just plain EVIL!][Pretending we are in vim? That's just plain EVIL!]]
+    - [[Line-numbers][Line-numbers]]
+    - [[Helpful][Helpful]]
+    - [[Which Key][Which Key]]
+    - [[Customize Group][Customize Group]]
+    - [[RSS, or how to get news the old-way.][RSS, or how to get news the old-way.]]
+      - [[Create =x= keybinding for =starring= (★) a register, in search map and show map][Create =x= keybinding for =starring= (★) a register, in search map and show map]]
+    - [[Japanese input.][Japanese input.]]
+      - [[Prerequesites][Prerequesites]]
+    - [[Rust][Rust]]
+      - [[See if we can use ~set-popup-rules!~ to do this for us.][See if we can use ~set-popup-rules!~ to do this for us.]]
+  - [[Private modules.][Private modules.]]
 
-* TODO Rationale
+* Rationale
 
-** TODO My vainilla emacs adventures
+During my undergraduate years, I remember having trouble setting up a postfix server for a
+practical exercise in one of my classes. I had to edit the default configuration
+file to harden the security of the system. My server was wrongly configured and
+I couldn't figure out what part of my edits I had messed up. We had to do all
+the changes to configuration file through a tty in an FreeBDS virtual machine,
+so I was forced to use a terminal editor. =nano= was my choice since it was
+similar to the other GUI editors I had used at the time. After much frustration,
+I asked a professor of mine to please help me out. He took over my seat, closed
+my =nano= session and reopened the conf file with a different editor. He was
+pressing all sorts of keys on the keyboard at an amazing speed, the cursor was
+flying all over the screen and I was simply at awe.
 
-** TODO Why Doom?
+He found what was wrong with my config and fixed it, telling me what he had
+changed. When he left, I tried to look up what command he had run to edit the
+file. This was my first experience with... =vim=.  I was introduced to =emacs= a
+few months later, when I saw a friend of mine taking some notes with it.
 
-[[https://blog.jethro.dev/posts/migrating_to_doom_emacs/][It's easy once you know what you are doing.]]
+In any case, this is the earliest point that I can remember thinking that the
+efficiency of text-editing, just like with any other task, is fully dependent on
+the tool used to achieve it. Considering that I was on a professional path to
+become a software engineer, a job that mostly consists of reading documentation,
+source code and editing, I figured that it would pay off in the long run to take
+some time to explore what editors were out there and make an educated choice for
+a text editor, instead of just using whatever was popular.
+
+** ~(message "Hello, %s!" "emacs")~
+
+Having taken that decision, I played around with =vim= and later on with
+=emacs=, finally settling with the former to write the code for my thesis. I
+started out with a vanilla configuration, a single =.emacs= file where I would
+copy and paste elisp from other people's config without much thinking.  It was
+ugly, messy and buggy but It was also very fun. I loved the idea of using code to
+configure the tool that I would use to edit code, so I stuck with it.
+
+My knowledge of emacs would come from google searches, blog posts and the online
+GNU Emacs documentation. I still hadn't learned how to ask emacs the things that
+I didn't know (The invaluable C-h _).  Embarrasingly, I didn't learn that until
+fairly late into my emacs usage history.  My editing needs were quite minimal so
+even if my configuration didn't have all the bells and whistles of other
+editors, It was good enough for me. I also knew, at least on a theoretical
+level, that emacs had very few limits when it came to extensibility. Emacs can
+interact with the OS to do just about anything, which explains part of the
+popular saying that refers to emacs as "A great OS, if only missing a good text
+editor".
+
+When I got frustrated with emacs because I broke it somehow or I didn't know how
+to do something with it, the potential of emacs as an almost infinitely
+extensible editor always kept me from switching editors and moving on. Even now,
+is this fact that keeps me going back to it.
+
+** Distro-hopping with emacs distros
+
+Life changes and so do our needs. I got my first full-time job as Web Developer
+and emacs had to level up to a robust daily driver. I had to use many different
+technologies in a project with continuously changing requirements.  My cute
+emacs experiment could not keep up and I was forced on using other editors to be
+able to push the work out.  However, I was always missing aspects of emacs when
+using  other editors, like the frame, buffer and window model, the automatic
+backup files or just the simple fact that I could change almost any aspect of my
+emacs if I so desired.
+
+I would still open up emacs for magit when interacting with git or for org-mode
+as my todo app. However, I wanted to use emacs for more than that. Emacs shines
+when you know what you want from it. However, It can be very daunting and take a
+lot of work to set up a configuration for "general" programming purposes.  Which
+packages are good? Which are compatible with what you have? When two or more
+packages are similar, how do you decide which one to use? If emacs was to be my
+daily driver, I would have to answer this questions often, which implies
+research, time and effort.
+
+_Why work on problems that others have already solved?_ With this in mind, I
+decided to try out =spacemacs=, a community developed emacs distribution full of
+pre-configured packages grouped by =layers=. And for a while, It worked out
+great. The defaults were good, it was functional enough and it could keep up
+with the technologies I was using at work. What was not to love? Well, with
+continuous use the wrinkles started to appear. For one, =spacemacs= was slow. It
+would take a long time to startup and commands were noticeably sluggish. It was
+also pretty buggy.  Sure, the layers for different languages worked reasonably
+well but from time to time emacs would behave in unexpected ways and I would
+have no idea why.
+
+Looking into ways of making =spacemacs= faster, I stumbled upon =doom= and
+decided to try it out. I was impressed (and I still am) with its speed, at
+startup and during use, it feels quick and snappy. Installing =doom= modules was
+similar enough to configuring =spacemacs= layers. While =doom= was not
+by any means buggy, I would get frustrated with it's opinionated defaults.
+=doom= would have some keybinding I didn't like or some package had some extra
+behaviour different to what I was used to and I wouldn't know how to change it
+to what I wanted.
+
+** Back to vanilla.
+
+At this point it was clear to me what was the real problem. My ignorance of the
+inner workings on emacs was my only limiting factor. So I took an extreme
+position, I went back to pure vanilla again, discarding all my previous
+configurations and starting from scratch, while using other editors for my job.
+My objective was to recreate the aspects that I liked from =doom= from scratch
+in my own configuration. Very naive, but I was motivated.
+
+I took it slow, researching Emacs throughly and little by little building my
+configuration, but trying to understand everything that I was chaging. I read
+[[https://www.masteringemacs.org/][Mickey Peterson's Mastering Emacs]], where I finally learned how to ask emacs about the
+things I don't understand. I found the excellent [[http://ergoemacs.org/][Xah's ergoemacs]] blog, an
+awesome reference I keep consulting even now with all sorts of information on
+elisp syntax, emacs concepts and configuration tips and tricks.
+
+I started following members of the awesome emacs community, such as
+[[https://protesilaos.com/dotemacs/][Protesilaos Stavrou]], a long term =vim= user transformed into a hardcore emacs user, whose
+videos explaining his configuration where a great inspiration for me and taught
+me to favour built-in packages over third party packages and most importantly,
+how to build my own criteria for what packages I should use.
+
+It took at least two months until I made a configuration that I could use at
+work again, but it felt great when I finally managed to have something
+that was reasonably fast, reproducible in any computer running linux and was
+functional enough for my use cases that I had made and I intimately understood!
+Although I am nowhere near a emacs expert, if such a thing exists, and a lot of
+details still escape me. I learned a LOT about not only emacs, but about
+lisp, functional programming and free (as in freedom) extensible software! Going
+back to basics paid of in spades.
+
+** TODO Why DOOM?
+
+I'll ask again, _Why work on problems that others have already solved?_. Well,
+in my case, It was to learn more about the problem-context.  The thing is, emacs
+is truly immense, even if we don't take into account all the third party
+packages written for it. It has it's own lisp dialect for extensibility, a
+=mode= system for defining unique behaviour in each buffer, with =major modes=
+(one per buffer) and =minor modes= (can be multiple or none in a buffer) that
+change the visual elements, available commands and keybindings and it has different
+systems to detect when and which of this modes it should activate at any given
+time. It also has different ways of running system commands synchronously or
+asynchronously and processing their output. It even has a process manager for the
+programs running under emacs!
+
+I'm not even being exaustive. Add to that 40 years of packages and multiple
+emacs releases! This wouldn't be so troublesome if it weren't for the terrible
+defaults with which emacs installs. Ugly default theme and questionable default
+bindings aside, it is terribly unoptimized for modern systems slowing down
+performance. During my vanilla adventure, a lot of my time was just spent trying
+to make emacs feel more modern and fast, which is very time consuming.  As a bit
+of tangent, I am suprised that packages such as gchm and use-package don't come
+preinstalled with emacs as they are incredible time savers, not just with
+performance but also in configuration time...
+
+At the beginning of reconfiguring my vanilla emacs, after addressing the
+terrible defaults, the problems I was trying to solve were interesting, perhaps
+because it was my first time trying to solve them. Things like "What's the best
+moment to lazy load this package?", "How do I write Spanish accents in emacs?"
+or "How should I structure my .el files directory?". As the configuration grew,
+more and more problems started appearing. Nothing major that broke my workflow
+but annoyances none the less. I would write =FIXME= comments in my .el files to
+keep track of this problems so I could fix them later.
+
+When I wanted to set up emacs for a new language environments, I would spend a
+lot of time checking out what community packages there were for that especific
+environment, putting =TODO= comments with the projects repository url so I could
+try out and configure it out later on. Quickly It became the case that for every =FIXME=
+or =TODO= comment I would solve, two or three more would appear.
+
+The =FIXME= were not such a big deal, I like hunting bugs and fixing them, since
+I always feel like I atleast learn something in the process.  The big problems
+were the =TODO=, which were not remotly as interesting to solve. Looking for
+packages is time consuming and many times I ended up not using what I tried out.
+Other times, the packages I was interested in were so massive I never wanted to
+because I knew It would take a long time to really configure it like I wanted
+to. Honorable mentions in this categories are =lsp= and =treemacs=.
+
+#+CAPTION: So many todos, so little time...
+[[./img/too-many-todos.png]]
+
+So, _Why work on problems that others have already solved?_. Not all problems
+are made equally and some problems are just tedious to solve, this is the
+principal reason why I choose to go back to =doom=. Another reason is that I
+strongly agree with the project guiding principals. =doom= is not and IDE
+replacement or a you get what you see type of editor. It's fully expected of its
+users to customize it and all its functionality is opened to the user so it can
+be tinkered with. No magic, just very well thought out elisp macros and hooks!
+
+This is perhaps what I like the most about =doom=, its true power resides in
+it's =core= module, where all the macros, functions and hooks used to help the
+user extend emacs resides. The =modules= in =doom= just use those set of tools
+to offer configuration options for specific use cases. This offers a mix of the
+best of both the worlds of vanilla emacs and spacemacs. With =doom= I can try
+out a module, see what I like, bring it over to my configuration, disable
+packages that I don't like and mix them with my own packages in a quick and
+reliable manner, much more so that If I were back in vanilla emacs.
+
+** TL;DR:
+
+[[https://blog.jethro.dev/posts/migrating_to_doom_emacs/][It offers reasonable defaults and lots of functionality without sacrificing extensability or performance]]
 
 * Installation
 
-** TODO Prerequesites
+** Prerequisites
+
+- Git 2.23+
+- Emacs 26.1+ *(27.x is recommended)*
+- [[https://github.com/BurntSushi/ripgrep][ripgrep]] 11.0+
+- GNU Find
+- (Optional) [[https://github.com/sharkdp/fd][fd]] 7.3.0+ (known as ~fd-find~ on Debian, Ubuntu & derivatives) --
+  improves performance for many file indexing commands
+
+Additionally, the =doom= executable (located at ~user-emacs-directory/bin/doom~)
+can be called with the =doctor= argument to obtain information of posible
+missing dependencies used in the modules.
 
 * Configuration
 
-Blocks preceded with =IE= are just examples that are not evaluated, the rest of the blocks are put in the filename of the corresponding heading.
+Blocks preceded with =IE= are just examples that are not evaluated, the rest of
+the blocks are put in the filename of the corresponding heading.
 
 ** init.el
 
 This file controls what Doom modules are enabled and what order they load
-in. Remember to run 'doom sync' after modifying it!
+in. Remember to run ~doom sync~ after modifying it!
 
 *** Lexical binding.
 
@@ -31,7 +288,6 @@ activated with a file parameter, as such:
 #+begin_src elisp :tangle init.el
 ;;; init.el -*- lexical-binding: t; -*-
 #+end_src
-
 
 *** doom!
 
@@ -48,18 +304,53 @@ flags they support.
 Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
 (for easy access to its source code).
 
+The ~doom!~ macro is capable of some conditional logic, thanks to the ~:if~ and
+~:cond~ keywords.  Unfortunately, these keywords are not well documented beyond
+and example in the docs. The rest of the keywords match with a directory location.
+The symbols following a keyword are a module that reside in said directory.
+
+A module is structurely similar to the ~$DOODIR~ folder. Defines a package.el
+and config.el in the very least, plus autoloads and such. Some modules are
+documented with a ~README.org~, many others are not, so it's important to take a
+look a the source code, see what they define and configure, before deciding to
+use a module.
+
+Some modules can be wrapped in a list and given 'flags', that activate extra
+optional configuration. The list must have the module name as the car, the flags
+as the tail.
+
+**** TODO Document which modules I choose and why.
+
+For brevity sake I'll mostly comment on the modules I am using, giving some insight
+on why I choose them and the dependencies needed to make them work. Ocassionally, I
+may comment on modules that I might try.
+
+
+***** :input
+
+I was tempted to use the ~japanese~ module but only ~pangu spacing~ seems like a
+package I could use, so I rather install it standalone.
+
 #+begin_src elisp :tangle init.el
 (doom! :input
        ;;chinese
        ;;japanese
        ;;layout            ; auie,ctsrnm is the superior home row
+#+end_src
 
+***** TODO :completion
+
+#+begin_src elisp :tangle init.el
        :completion
        company           ; the ultimate code completion backend
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
        (ivy +icons)        ; a search engine for love and life
+#+end_src
 
+***** TODO :ui
+
+#+begin_src elisp :tangle init.el
        :ui
        ;;deft              ; notational velocity for Emacs
        doom              ; what makes DOOM look the way it does
@@ -84,7 +375,11 @@ Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
        ;;window-select     ; visually switch windows
        workspaces        ; tab emulation, persistence & separate workspaces
        ;;zen               ; distraction-free coding or writing
+#+end_src
 
+***** TODO :editor
+
+#+begin_src elisp :tangle init.el
        :editor
        (evil +everywhere); come to the dark side, we have cookies
        file-templates    ; auto-snippets for empty files
@@ -98,25 +393,40 @@ Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
        ;;rotate-text       ; cycle region at point between text candidates
        snippets          ; my elves. They type so I don't have to
        ;;word-wrap         ; soft wrapping with language-aware indent
+#+end_src
 
+***** TODO :emacs
+
+#+begin_src elisp :tangle init.el
        :emacs
        dired             ; making dired pretty [functional]
        electric          ; smarter, keyword-based electric-indent
        ;;ibuffer         ; interactive buffer management
        undo              ; persistent, smarter undo for your inevitable mistakes
        vc                ; version-control and Emacs, sitting in a tree
+#+end_src
 
+***** TODO :term
+
+#+begin_src elisp :tangle init.el
        :term
        ;;eshell            ; the elisp shell that works everywhere
        ;;shell             ; simple shell REPL for Emacs
        ;;term              ; basic terminal emulator for Emacs
        vterm             ; the best terminal emulation in Emacs
+#+end_src
 
+***** TODO :checkers
+
+#+begin_src elisp :tangle init.el
        :checkers
        syntax              ; tasing you for every semicolon you forget
-       ;;spell             ; tasing you for misspelling mispelling
-       ;;grammar           ; tasing grammar mistake every you make
+       ;; spell             ; tasing you for misspelling mispelling
+       ;; grammar           ; tasing grammar mistake every you make
+#+end_src
 
+***** TODO :tools
+#+begin_src elisp :tangle init.el
        :tools
        ;;ansible
        ;;debugger          ; FIXME stepping through code, to help you add bugs
@@ -138,11 +448,17 @@ Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
        ;;terraform         ; infrastructure as code
        ;;tmux              ; an API for interacting with tmux
        ;;upload            ; map local to remote projects via ssh/ftp
+#+end_src
 
+***** TODO :tools
+#+begin_src elisp :tangle init.el
        :os
-       (:if IS-MAC macos)  ; improve compatibility with macOS
+       ;;(:if IS-MAC macos)  ; improve compatibility with macOS
        ;;tty               ; improve the terminal Emacs experience
+#+end_src
 
+***** TODO :lang
+#+begin_src elisp :tangle init.el
        :lang
        ;;agda              ; types of types of types of types...
        ;;cc                ; C/C++/Obj-C madness
@@ -168,7 +484,7 @@ Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
        ;;idris             ;
        ;;json              ; At least it ain't XML
        ;;(java +meghanada) ; the poster child for carpal tunnel syndrome
-       ;;javascript        ; all(hope(abandon(ye(who(enter(here))))))
+       (javascript +lsp)   ; all(hope(abandon(ye(who(enter(here))))))
        ;;julia             ; a better, faster MATLAB
        ;;kotlin            ; a better, slicker Java(Script)
        ;;latex             ; writing papers in Emacs has never been so fun
@@ -184,43 +500,79 @@ Alternatively, press 'gd' (or 'C-c c d') on a module to browse its directory
        ;;php               ; perl's insecure younger brother
        ;;plantuml          ; diagrams for confusing people more
        ;;purescript        ; javascript, but functional
-       ;;python            ; beautiful is better than ugly
+       (python +lsp +pyright) ; beautiful is better than ugly
        ;;qt                ; the 'cutest' gui framework ever
        ;;racket            ; a DSL for DSLs
        ;;raku              ; the artist formerly known as perl6
        ;;rest              ; Emacs as a REST client
        ;;rst               ; ReST in peace
        ;;(ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
-       (rust +lsp)              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
+#+end_src
+
+
+****** rust +lsp
+
+Rustic mode is great and the integrates really well with cargo.  The defaults
+are also reasonable, what's not to love?
+
+#+begin_src elisp :tangle init.el
+       (rust +lsp)         ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
+#+end_src
+
+******* Dependencies:
+
+Requires [[https://github.com/rust-lang/rls][rls]] or [[https://rust-analyzer.github.io/manual.html#installation][rust-analyzer]], both obtainable with [[https://github.com/rust-lang/rustup][rustup]]. I always use =rls=.
+
+****** TODO sh
+
+#+begin_src elisp :tangle init.el
        ;;scala             ; java, but good
        ;;scheme            ; a fully conniving family of lisps
-       sh                ; she sells {ba,z,fi}sh shells on the C xor
+       sh                  ; she sells {ba,z,fi}sh shells on the C xor
+#+end_src
+
+****** TODO web
+
+#+begin_src elisp :tangle init.el
        ;;sml
        ;;solidity          ; do you need a blockchain? No.
        ;;swift             ; who asked for emoji variables?
        ;;terra             ; Earth and Moon in alignment for performance.
-       ;;web               ; the tubes
+       (web +lsp)          ; the tubes
        ;;yaml              ; JSON, but readable
+#+end_src
 
+***** TODO :email
+
+#+begin_src elisp :tangle init.el
        :email
        ;;(mu4e +gmail)
        ;;notmuch
        ;;(wanderlust +gmail)
+#+end_src
 
+***** TODO :app
+
+#+begin_src elisp :tangle init.el
        :app
        ;;calendar
        ;;irc               ; how neckbeards socialize
        (rss +org)        ; emacs as an RSS reader
        ;;twitter           ; twitter client https://twitter.com/vnought
+#+end_src
 
+***** TODO :config
+
+#+begin_src elisp :tangle init.el
        :config
        literate
        (default +bindings +smartparens))
 #+end_src
 
 ** package.el
-
 *** Lexical binding
+
+Been there, done that...
 
 #+begin_src elisp :tangle packages.el
 ;; -*- no-byte-compile: t; -*-
@@ -322,6 +674,8 @@ So, finally, let's declare the packages we will use:
 #+begin_src elisp :tangle packages.el
 (package! org-edna)
 (package! mozc)
+(package! nvm)
+; TODO https://github.com/dalanicolai/pdf-continuous-scroll-mode.el/blob/master/pdf-continuous-scroll-mode.el Look into this.
 #+end_src
 
 And disable ones we don't use.
@@ -331,13 +685,13 @@ And disable ones we don't use.
 #+end_src
 
 ** config.el
-
 *** Lexical binding
+
+Third time is the charm...
 
 #+BEGIN_SRC elisp
 ;;; $DOOMDIR/config.el -*- lexical-binding: t; -*-
 #+END_SRC
-
 
 *** Personal information
 
@@ -348,7 +702,6 @@ clients, file templates and snippets.
 (setq user-full-name "Daniel Levy Moreno"
       user-mail-address "daniellevymoreno@gmail.com")
 #+end_src
-
 
 *** Default font
 
@@ -373,7 +726,6 @@ Let's choose our monospaced font, Roboto Mono goodness:
 #+begin_src elisp
 (setq doom-font (font-spec :family "monospace" :size 16 :name "Roboto Mono"))
 #+end_src
-
 
 *** Default theme
 
@@ -405,7 +757,6 @@ Matching pairs draw with the same face color, making them easily identifiable.
 #+begin_src elisp
 (add-hook! 'prog-mode-hook #'rainbow-delimiters-mode-enable)
 #+end_src
-
 
 *** Modeline
 
@@ -464,15 +815,18 @@ Modules for keeping track of habits and completing checklists.
     (org-module  '(org-habit org-checklist))
 #+end_src
 
-Switch entry to 'DONE' when all subentries are done, to 'TODO' otherwise.
+Switch entry to 'DONE' when all subentries are done else keep entry original todo state.
 
 #+begin_src elisp
-    :config
-    (add-hook! 'org-after-todo-statistics-hook '(lambda (n-done n-not-done)
-                          (let (org-log-done org-log-states)
-                            (org-todo (if (= n-not-done 0) "DONE" "TODO")))))
+:config
+(add-hook! 'org-after-todo-statistics-hook '(lambda (n-done n-not-done)
+                                              (let (org-log-done org-log-states)
+                                                (org-todo (if (= n-not-done 0)
+                                                              "DONE"
+                                                            (pcase (org-get-todo-state) ;; Keeps the keyword state.
+                                                              ('nil "")
+                                                              (todo todo)))))))
 #+end_src
-
 
 Switch header 'TODO' state to 'DONE' when all checkboxes are ticked, to 'TODO'
 otherwise
@@ -508,9 +862,10 @@ More control ove how and when tasks change state.
 #+begin_src elisp
 (use-package! org-edna
   :hook
-  '(org-mode . org-edna-mode))
+  '(org-mode . org-edna-mode)
+  :custom
+  (org-edna-from-todo-states 'not-done)) ;; TODO Document why this!
 #+end_src
-
 
 *** Pretending we are in vim? That's just plain EVIL!
 
@@ -557,7 +912,6 @@ numbers are disabled. For relative line numbers, set this to ~relative~.
 #+begin_src elisp
 (setq display-line-numbers-type 'relative)
 #+end_src
-
 
 *** Helpful
 
@@ -655,9 +1009,11 @@ Keybinding to easily find the feeds file.
 
 *** Japanese input.
 
-I am learning japanese as a hobby, and I do most of my note taking in emacs. To input japanese text we use google's MOZC.
+I am learning japanese as a hobby, and I do most of my note taking in emacs. To
+input japanese text we use google's MOZC.
 
-First, let's define our toggle function. Activates mozc mode and changes the modeline to show it.
+First, let's define our toggle function. Activates mozc mode and changes the
+modeline to show it.
 
 #+begin_src elisp
 ;;;###autoload
@@ -706,7 +1062,7 @@ Finally, we create a keybinding activate mozc-mode.
 
 **** TODO Prerequesites
 
-Requires emacs_mozc_helper, this is how you install it:
+Requires =emacs_mozc_helper=, this is how you install it:
 
 *** Rust
 
@@ -728,3 +1084,13 @@ When using the rustic popup, be in emacs state.
   (when (featurep 'evil)
     (add-hook! 'rustic-popup-mode-hook #'evil-emacs-state)))
 #+end_src
+
+** TODO Private modules.
+
+=doom= allows the user to [[https://github.com/hlissner/doom-emacs/blob/develop/docs/getting_started.org#writing-your-own-modules][to write their own modules]] in their ~$DOOMDIR~
+directory, which will be autoloaded at startup. It offers a few extra features
+like interection and extension of ~bin/doom~, a fixed file structure where each
+file is loaded at different points of the runtime and other niceties (more
+~macros!~).
+
+For now, I haven't had the need to use this feature but is good to be aware of it.
